# ghostwriter-tauri

./: .gitignore  README.md  README_NOTARIZATION.md  README_QuickStartGuide.md  README_TAURI_MULTIPLE_WINDOWS.md  README_VibeModeProjectBrief.md  README_dev.md  canon-view.html  index.html  menu_rs_ignore  package-lock.json  package.json  view-log.html  vite.config.js
public/: api_key.html  fonts.css
src/: canon-manager.css  canon-view.js  canon.css  completions.js  drag-region-height-fix.css  fonts.css  index.html  main.js  simplify.js  style_handler.js  styles.css  timer.js  typingPause.js  url-panel.js  view-log.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/ghostwriter-selectric/vector_store/: ghostwriter.canon
src-tauri/src/: app_state.rs  conversations.rs  document_scanner.rs  document_store.rs  embeddings.rs  keychain_handler.rs  lib.rs  logger.rs  main.rs  menu.rs  preferences.rs
src-tauri/src/ai/: mod.rs  models.rs  traits.rs
src-tauri/src/ai/providers/: inception_labs_provider.rs  lm_studio.rs  lm_studio_provider.rs  mod.rs  ollama_provider.rs  openai.rs  openai_provider.rs
src-tauri/src/ingest/: audio_ingestor.rs  document_ingestor.rs  epub_ingestor.rs  markdown_ingestor.rs  mdx_ingestor.rs  mod.rs  mongodb_ingestor.rs  pdf_ingestor.rs  text_ingestor.rs  url_ingestor.rs
src-tauri/tests/: document_processing_test.rs  ingest_test.rs  mdx_test.rs  pdf_integration_test.rs  pdf_test.rs  pipeline_test.rs
src-tauri/tests/fixtures/: test.md  test.mdx
src/extensions/: BasicHighlightMark.js  BlockCursorDecoration.js  BlockOverCursorDecoration.js  CanonEntryNode.js  ClickableNode.js  DiagnosticLogEntryNode.js  DynamicLogEntryNode.js  DynamicTextBlockNode.js  DynamicTextMark.js  DynamicTextNode.js  FixedInlineNode.js  GhostCompletionDecoration.js  GhostCompletionMark.js  HighlightMark.js  InlineActionItem.js  InlineEditableClickableNode.js  NavigableInlineNode.js  ProgressNode.js  RichLogEntryNode.js  SimpleLogEntryNode.js  TextContourNode.js  VirtualCursor.js
src/plugins/: CursorTrackerPlugin.js
