[package]
name = "gh-tauri-tt-js"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gh_tauri_tt_js_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.25"
epub = "2.1.2"
lopdf = "0.35.0"
rusqlite = "0.33.0"
dotenv = "0.15.0"
walkdir = "2.5.0"
bincode = "1.3.3"
async-openai = "0.27.2"
chrono = "0.4.39"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"

