[package]
name = "gh-tauri-tt-js"
version = "0.1.0"
description = "Ghostwriter"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gh_tauri_tt_js_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
epub = "2.1.2"
lopdf = "0.35.0"
rusqlite = { version = "0.33.0", features = ["bundled"] }
dotenv = "0.15.0"
walkdir = "2.5.0"
bincode = "1.3.3"
async-openai = "0.27.2"
chrono = { version = "0.4.39", features = ["serde"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = { version = "2.0.0-rc.2" }
tauri-plugin-dialog = "2"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4.0"
tokio = { version = "1.43", features = ["full", "test-util"] }
sqlite-vec = "0.1.6"
pdf-extract = "0.8.2"
pulldown-cmark = "0.12.2"
async-trait = "0.1.86"
thiserror = "2.0.11"
futures = "0.3.31"
gray_matter = "0.2.8"
tempfile = "3.16.0"
pdfium-render = "0.8.28"
regex = "1.11.1"
confy = "0.6.1"
rand = "0.8"
tauri-plugin-fs = "2.2.0"
